--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,10 @@ layout: default
 
 <span class="time">{{ page.date | date_to_string }}</span>
 
+{% if page.creator %}
+  <span class="creator">, created by {{ page.creator }}</span>
+{% endif %}
+
 {% if page.categories %}
   <span class="categories">
     &raquo; {% for category in page.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
