--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <span class="time">{{ page.date | date_to_string }}</span>
 
 {% if page.creator %}
-  <span class="creator">, created by {{ page.creator }}</span>
+  <span class="creator"> created by {{ page.creator }}</span>
 {% endif %}
 
 {% if page.categories %}
