--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,8 +153,8 @@ layout: compress
             - <a href="{{ site.github }}">{{ site.github }}</a> - Powered by Jekyll.
           {% endif %}
           <div class="btn-github" style="float:right;">
-            <iframe src="https://ghbtns.com/github-btn.html?user=cullaloe&repo=Natural-Partners&type=star&count=true" frameborder="0" scrolling="0" width="85" height="20px"></iframe>
-            <iframe src="https://ghbtns.com/github-btn.html?user=cullaloe&repo=Natural-Partners&type=fork&count=true" frameborder="0" scrolling="0" width="85" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=niximagery&repo=Natural-Partners&type=star&count=true" frameborder="0" scrolling="0" width="85" height="20px"></iframe>
+            <iframe src="https://ghbtns.com/github-btn.html?user=niximagery&repo=Natural-Partners&type=fork&count=true" frameborder="0" scrolling="0" width="85" height="20px"></iframe>
           </div>
         </footer>
       </div>
